package com.udacity.project4

import android.app.Application
import androidx.fragment.app.testing.launchFragmentInContainer
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.dto.ReminderDTO
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import com.udacity.project4.utils.EspressoIdlingResource
import kotlinx.coroutines.delay
import kotlinx.coroutines.runBlocking
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.GlobalContext
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers
import androidx.test.espresso.matcher.ViewMatchers.isChecked
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.test.runBlockingTest
import org.hamcrest.core.IsNot.not
import org.koin.test.KoinTest


@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :

    // Help on KoinTest with thanks to https://knowledge.udacity.com/questions/666889
    KoinTest {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application
    private lateinit var viewModel: SaveReminderViewModel
    private lateinit var remindersActivity: RemindersActivity

    @get:Rule
    var activityTestRule: ActivityTestRule<RemindersActivity> =
        ActivityTestRule(RemindersActivity::class.java)

    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //Declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        remindersActivity = activityTestRule.activity
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
        viewModel = GlobalContext.get().koin.get()
    }

    // Add End to End testing to the app
    @Test
    fun saveReminder_showToast_test() {
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)

        // nvaigate to SaveReminderFragment
        onView(withId(R.id.noDataTextView)).check(matches(isDisplayed()))
        onView(withId(R.id.addReminderFAB)).perform(click())

        // Populate the text views within the SaveReminderFragment
        onView(withId(R.id.reminderTitle)).perform(replaceText("title test"))
        onView(withId(R.id.reminderDescription)).perform(replaceText("description test"))
        // Move into SaveLocationFragment
        onView(withId(R.id.selectLocation)).perform(click())
        // Use long click to set a pin on the map
        onView(withId(R.id.map)).perform(longClick())
        onView(withId(R.id.save_location_button)).perform(click())

        // return to SaveReminderFragment and click save to finalize
        onView(withId(R.id.saveReminder)).perform(click())

        // Check that the toast is displayed
        onView(withText(R.string.reminder_saved)).inRoot(RootMatchers.withDecorView(not(remindersActivity.window.decorView)))
            .check(matches(isDisplayed()))

        activityScenario.close()
    }

    @Test
    fun saveReminder_showSnackbar_test() {
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)

        // navigate to SaveReminderFragment
        onView(withId(R.id.noDataTextView)).check(matches(isDisplayed()))
        onView(withId(R.id.addReminderFAB)).perform(click())

        // Click the save button without any text in title or description
        onView(withId(R.id.saveReminder)).perform(click())

        // Verify snackbars from SaveReminderViewModel
        onView(withId(R.id.snackbar_text)).check(matches(withText(R.string.err_enter_title)))
        Thread.sleep(4000)

        // Fill title field with text so we can test what happens when location is null
        onView(withId(R.id.reminderTitle)).perform(replaceText("title text"))
        onView(withId(R.id.saveReminder)).perform(click())
        onView(withId(R.id.snackbar_text)).check(matches(withText(R.string.err_select_location)))

        activityScenario.close()
    }
}
